--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@lit/lit-starter-js",
-  "private": true,
-  "version": "0.0.0",
-  "description": "A simple web component",
-  "main": "my-element.js",
-  "module": "my-element.js",
+  "name": "@djplaner/university-date-calendar",
+  "version": "0.0.1",
+  "description": "Singelton helper for university-date component",
+  "main": "university-date-calendar.js",
+  "module": "university-date-calendar.js",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/djplaner/university-date-calendar.git"
+  },
   "scripts": {
     "build": "echo \"This is not a TypeScript project, so no need to build.\"",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
