--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "rollup": "^2.28.2",
     "rollup-plugin-summary": "^1.2.3",
     "rollup-plugin-terser": "^7.0.2",
+    "terser": "^5.12.1",
     "web-component-analyzer": "^1.0.3"
   }
 }
